--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <header>
       <div class="avatar card"><img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=800&auto=format&fit=crop" alt="個人頭像"></div>
       <div class="headline">
-        <h1>王小明（範例）</h1>
+        <h1>李興鴻（範例）</h1>
         <p class="lead">前端工程師 · 視覺設計愛好者 · 喜歡用程式解決問題</p>
       </div>
     </header>
