--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <header>
       <div class="avatar card"><img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=800&auto=format&fit=crop" alt="個人頭像"></div>
       <div class="headline">
-        <h1>李興鴻（範例）</h1>
+        <h1>李興鴻</h1>
         <p class="lead">前端工程師 · 視覺設計愛好者 · 喜歡用程式解決問題</p>
       </div>
     </header>
@@ -104,7 +104,7 @@
       <section>
         <div class="card section">
           <h2>自我介紹</h2>
-          <p class="bio">嗨，你好！我是王小明，從事前端開發與使用者介面設計已超過 5 年。我的專長是把複雜的需求拆解並用乾淨、可維護的程式碼呈現出流暢的使用者體驗。閒暇時我喜歡攝影、烹飪與籃球。</p>
+          <p class="bio">嗨，你好！我是李興鴻，我今年十八歲了，我喜歡鍛鍊和喜歡玩藤球 。我的專長是把複雜的需求拆解並用乾淨、可維護的程式碼呈現出流暢的使用者體驗。閒暇時我喜歡攝影、烹飪與籃球。</p>
         </div>
 
         <div class="card section">
