--- a/index.html
+++ b/index.html
@@ -163,16 +163,16 @@
         </div>
 
         <div class="card section">
-          <h2>家庭</h2>
+          <h2>想去的地方</h2>
           <div class="family-list">
-            <div class="family-member"><img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=800&auto=format&fit=crop" alt="家人一"><div><strong>父親</strong><div class="meta">退休教師</div></div></div>
-            <div class="family-member"><img src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?q=80&w=800&auto=format&fit=crop" alt="家人二"><div><strong>母親</strong><div class="meta">醫護人員</div></div></div>
+            <div class="family-member"><img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=800&auto=format&fit=crop" alt="一"><div><strong>富士山</strong><div class="meta">退休教師</div></div></div>
+            <div class="family-member"><img src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?q=80&w=800&auto=format&fit=crop" alt="二"><div><strong>中國</strong><div class="meta">醫護人員</div></div></div>
           </div>
         </div>
 
         <div class="card section">
           <h2>興趣 / 愛好</h2>
-          <p class="meta">攝影 · 烹飪 · 籃球 · 旅行</p>
+          <p class="meta">玩藤球 · 游泳 · 籃球 · 打鼓 </p>
         </div>
 
       </aside>
