--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@
         </div>
 
         <div class="card section">
-          <h2>我的愛好（範例）</h2>
-          <div class="meta">2025– 現在 · XYZ 科技 — 前端工程師</div>
+          <h2>我（範例）</h2>
+          <div class="meta">2025– 現在 · XYZ 科技 — 前</div>
           <ul>
             <li>我喜歡寫硬筆。</li>
             <li>我會打鼓、有活動的時候我每次都參加。</li>
             <li></li>
           </ul>
-          <div class="meta" style="margin-top:8px">2021 – 2023 · ABC 創意 — UI 設計師</div>
+          <div class="meta" style="margin-top:8px">2021 – 2023 · ABC 創意 — </div>
           <ul>
             <li>有參加漢字文化硬筆比賽。</li>
           </ul>
