--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <body>
   <div class="container">
     <header>
-      <div class="avatar card"><img src="https://live.staticflickr.com/8467/8438588648_88f2e70424_z.jpg" alt="個人頭像"></div>
+      <div class="avatar card"><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fth.freepik.com%2F%25E0%25B9%2580%25E0%25B8%25A7%25E0%25B8%2581%25E0%25B9%2580%25E0%25B8%2595%25E0%25B8%25AD%25E0%25B8%25A3%25E0%25B9%258C%25E0%25B8%25A3%25E0%25B8%25B0%25E0%25B8%2594%25E0%25B8%25B1%25E0%25B8%259A%25E0%25B8%259E%25E0%25B8%25A3%25E0%25B8%25B5%25E0%25B9%2580%25E0%25B8%25A1%25E0%25B8%25B5%25E0%25B9%2588%25E0%25B8%25A2%25E0%25B8%25A1%2Fcartoon-cute-little-boy-student-giving-thumb-up-vector_293071555.htm&psig=AOvVaw0b9BUHXqsCdtPoN7UFGgu6&ust=1758963569320000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCNi-v4iI9o8DFQAAAAAdAAAAABAE" alt="個人頭像"></div>
       <div class="headline">
         <h1>李興鴻</h1>
         <p class="lead">前端工程師 · 視覺設計愛好者 · 喜歡用程式解決問題</p>
