--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>個人自我介紹範本</title>
+  <title>個人自我介紹</title>
   <style>
     :root{
       --bg:#f7f7fb;
