--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <section>
         <div class="card section">
           <h2>自我介紹</h2>
-          <p class="bio">嗨，你好！我是李興鴻，我今年十八歲了，我喜歡鍛鍊和喜歡玩藤球 。閒暇時我喜歡攝影、烹飪與籃球。</p>
+          <p class="bio">嗨，你好！我是李興鴻，我今年十八歲了，泰文學笑我已經在高二了在高二了，我喜歡鍛鍊和喜歡有時候我喜歡攝影、烹飪與籃球。</p>
         </div>
 
         <div class="card section">
