--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <li>我會打鼓、有活動的時候我每次都參加。</li>
             <li></li>
           </ul>
-          <div class="meta" style="margin-top:8px">2021 – 2023 · ABC 創意 — </div>
+          <div class="meta" style="margin-top:8px">2021 – 2023 · ABC 創意 —書法家 </div>
           <ul>
             <li>有參加漢字文化硬筆比賽。</li>
           </ul>
